--- a/lab4/templates/group.html
+++ b/lab4/templates/group.html
@@ -7,6 +7,9 @@ table, th, td {
 }
 </style>
 
+{% extends "layout.html" %}
+{% block content %}
+
 <head>
     <meta charset="UTF-8">
     <title>Личный кабинет группы</title>
@@ -18,17 +21,19 @@ table, th, td {
     <table style="width:100%">
         <thead>
             <tr>
-                <th colspan="3">Ученики группы</th>
+                <th colspan="4">Ученики группы</th>
             </tr>
         </thead>
         <tbody>
             <tr>
+                <td><b>id</b></td>
                 <td><b>Имя</b></td>
                 <td><b>Git</b></td>
                 <td><b>Успеваемость</b></td>
             </tr>
             {% for student in students_w_tasks %}
             <tr>
+                <td><a href="{{'/student/%s'%student[0].id|urlencode}}">{{student[0].id}}</a></td>
                 <td>{{student[0].name}}</td>
                 <td>{{student[0].git}}</td>
                 <td>{{(100 * student[1] / student[2])|round}}%</td>
@@ -36,26 +41,16 @@ table, th, td {
             {% endfor %}
         </tbody>
     </table>
-    <input placeholder="student id">
-    <button>Добавить ученика</button>
     <hr>
-    <h2>Назначенные задачи</h2>
-    <table style="width:100%">
-        <thead>
-            <tr>
-                <th colspan="4">Задачи</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td><b>Название</b></td>
-                <td><b>Описание</b></td>
-                <td><b>Код</b></td>
-                <td><b>Сложность</b></td>
-            </tr>
-        </tbody>
-    </table>
-    <input placeholder="task id">
-    <button>Добавить Задачу</button>
+    {% for message in get_flashed_messages() %}
+            <div class="alert">{{ message }}</div>
+    {% endfor %}
+    <form method="post">
+        <input name="task_id" placeholder="task id">
+        <button type=submit>Добавить Задачу для всей группы</button>
+    </form>
 </body>
+
+{% endblock %}
+
 </html>
